axum-debug/tests/fail/invalid_attrs.stderr
error: unknown argument
 --> tests/fail/invalid_attrs.rs:3:17
  |
3 | #[debug_handler(foo)]
  |                 ^^^
